# Agentic-sql

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml  test_agentic_brain.py  test_business_comprehensive.py  test_business_user_comprehensive.py  test_debug_intelligent.py  test_discovery_only.py  test_dynamic_training.py  test_e2e_intelligent_system.py  test_extreme.py  test_legislation_system.py  test_meta_agent.py  test_sql_generation.py  test_stress.py  test_true_agent.py  test_truly_intelligent.py
.github/workflows/: docs.yml
agents/: index.html
agents/sql-agent/: index.html
agents/workflows/: index.html
api/database-adapters/: index.html
api/llm-clients/: index.html
api/memory-manager/: index.html
api/meta-agent/: index.html
api/server/: index.html
databases/: index.html
databases/mssql/: index.html
databases/mysql/: index.html
databases/postgresql/: index.html
databases/snowflake/: index.html
databases/sqlite/: index.html
docs/: _config.yml  api-reference.md  databases.md  examples.md  getting-started.md  index.md  memory-system.md  multi-agent.md
docs/agents/: index.md  sql-agent.md  workflows.md
docs/api/: database-adapters.md  llm-clients.md  memory-manager.md  meta-agent.md  server.md
docs/databases/: index.md  mssql.md  mysql.md  postgresql.md  snowflake.md  sqlite.md
docs/examples/: snippets.md  tutorials.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: auto-discovery.md  auto-learning.md  query-processing.md  self-healing.md
docs/llm/: bedrock.md
docs/memory/: architecture.md  ecl-pipeline.md  stores.md  types.md
docs/stylesheets/: extra.css
examples/: 01_quickstart.py  02_databases.py  03_auto_learning.py  04_memory_stores.py  04_memory_system.py  05_multi_agent.py  06_api_server.py  07_complete_example.py  README.md
examples/snippets/: index.html
examples/tutorials/: index.html
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/auto-discovery/: index.html
guide/auto-learning/: index.html
guide/query-processing/: index.html
guide/self-healing/: index.html
llm/bedrock/: index.html
memory/architecture/: index.html
memory/ecl-pipeline/: index.html
memory/stores/: index.html
memory/types/: index.html
search/: search_index.json
src/: __init__.py
src/agents/: __init__.py  analyst_agent.py  sql_agent.py  validator_agent.py
src/api/: __init__.py  auth.py  server.py
src/core/: __init__.py  base.py  orchestrator.py  registry.py
src/database/: __init__.py  multi_db.py
src/intelligence/: __init__.py  adaptive_learning.py  agentic_brain.py  auto_discovery.py  auto_trainer.py  meta_agent.py  (+9 more)
(+19 files in other folders)
